# NGN

./: .gitignore  CMakeLists.txt
App/Sandbox/: CMakeLists.txt  imgui.ini
App/Sandbox/Shaders/: Transform.vertex.glsl  fragment.glsl
App/Sandbox/Source/: AppLayer.cpp  AppLayer.h  DebugLayer.h  GameLayer.cpp  GameLayer.h  GameLayer3D.cpp  GameLayer3D.h  OverlayLayer.cpp  OverlayLayer.h  SandboxApp.cpp  TestLayer.h  VoidLayer.cpp  VoidLayer.h  main.cpp
App/Sandbox/assets/Shaders/: Flame.glsl  Mesh3D.glsl  Quad.vert.glsl  Texture.frag.glsl  Transform.vertex.glsl
App/Sandbox/logs/: NGNProfile-Runtime.json  NGNProfile-Shutdown.json  NGNProfile-Startup.json  ngn_profile.json
Core/: CMakeLists.txt
Core/Source/Components/: Component.h  TransformComponent.cpp  TransformComponent.h
Core/Source/Core/: Application.cpp  Application.h  Assert.h  Base.h  Instrumentor.cpp  Instrumentor.h  KeyCodes.h  Layer.cpp  Layer.h  Log.cpp  Log.h  MouseCodes.h  Profile.h  UUID.cpp  UUID.h  Window.cpp  Window.h  ngnpch.h
Core/Source/Debug/: ChromeProfiling.h
Core/Source/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Core/Source/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Core/Source/Math/: Math.cpp  Math.h
Core/Source/Platform/OpenGL/: GLUtils.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLVertexArray.cpp
Core/Source/Platform/Windows/: WinWindow.cpp  WindowsInput.cpp  WindowsPlatformUtils.cpp
Core/Source/Renderer/: Camera.h  Framebuffer.cpp  Framebuffer.h  GLUtils.cpp  GLUtils.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp
Core/Source/Scene/: ComponentPool.h  ComponentPoolBase.h  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  System.h  TransformDebugSystem.h  World.h  eEntity.h  eScene.cpp  eScene.h
Core/src/: NGN.h  ngnpch.h
Core/src/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Input.cpp  Input.h  Instrumentor.cpp  Instrumentor.h  KeyCodes.h  Layer.cpp  Layer.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timestep.h  Window.cpp  Window.h
Core/src/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
Core/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Core/src/Input/: Input.cpp  Input.h  InputBindings.cpp  InputBindings.h  InputMapper.cpp  InputMapper.h  InputState.h
Core/src/Platform/OpenGL/: GLUtils.cpp  GLUtils.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Core/src/Platform/Windows/: WinWindow.cpp  WinWindow.h  WindowsInput.cpp  WindowsInput.h
Core/src/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Font.h  Framebuffer.h  Frustum.cpp  Frustum.h  GraphicsContext.cpp  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspCameraController.cpp  PerspCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  Shader.cpp  Shader.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Core/src/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneManager.cpp  SceneManager.h
Core/src/Scene/Systems/: MeshRenderSystem.cpp  MeshRenderSystem.h  PlayerControllerSystem.cpp  PlayerControllerSystem.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  System.h
Core/src/Utils/: PlatformUtils.h
Editor/: CMakeLists.txt  imgui.ini
Editor/assets/Shaders/: Quad.frag.glsl  Quad.vert.glsl  Renderer2D_Quad.glsl
Editor/logs/: NGNProfile-Runtime.json  NGNProfile-Shutdown.json  NGNProfile-Startup.json
Editor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
cmake/: Dependencies.cmake
